// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interests should show error when fetching interest suggestions failed 1`] = `
<div>
  <h1
    className="sc-dVhcbM gPsyUa"
  >
    Kiinnostukset
  </h1>
  <div>
    error
  </div>
</div>
`;

exports[`Interests should show loading indicator (placeholder tags) when fetching suggestions 1`] = `
<div>
  <h1
    className="sc-bdVaJa hqCxXu"
  >
    Kiinnostukset
  </h1>
  <div
    className="sc-iwsKbI laYIiJ"
  >
    <div
      className="sc-VigVT TyGGh"
    >
      <div
        className="sc-htoDjs cKmTuq"
      >
        <div
          className="sc-dnqmqq jcnWGu"
        />
        <div
          className="sc-dnqmqq jcnWGu"
        />
        <div
          className="sc-dnqmqq jcnWGu"
        />
        <div
          className="sc-dnqmqq jcnWGu"
        />
      </div>
    </div>
    <div
      className="sc-gZMcBi bIDViS"
    >
      <div
        className="sc-fjdhpX khYAnD"
        width="55%"
      />
      <div
        className="sc-fjdhpX hABshK"
        width="77%"
      />
      <div
        className="sc-fjdhpX ezCgPo"
        width="65%"
      />
    </div>
    <div
      className="sc-gqjmRU ksnVNk"
    >
      <div
        className="sc-jTzLTM hDugnc"
        width="2rem"
      />
      <div
        className="sc-jTzLTM eRznqm"
        width="3rem"
      />
      <div
        className="sc-jTzLTM jtDwYV"
        width="5rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
      <div
        className="sc-jTzLTM iIkCPF"
        width="3rem"
      />
      <div
        className="sc-jTzLTM UOrTg"
        width="2rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
      <div
        className="sc-jTzLTM eRznqm"
        width="3rem"
      />
      <div
        className="sc-jTzLTM jtDwYV"
        width="5rem"
      />
      <div
        className="sc-jTzLTM kfvbdv"
        width="4rem"
      />
      <div
        className="sc-jTzLTM UOrTg"
        width="2rem"
      />
      <div
        className="sc-jTzLTM eRznqm"
        width="3rem"
      />
      <div
        className="sc-jTzLTM jtDwYV"
        width="5rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
      <div
        className="sc-jTzLTM eRznqm"
        width="3rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
      <div
        className="sc-jTzLTM iIkCPF"
        width="3rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
      <div
        className="sc-jTzLTM eRznqm"
        width="3rem"
      />
      <div
        className="sc-jTzLTM UOrTg"
        width="2rem"
      />
      <div
        className="sc-jTzLTM jtDwYV"
        width="5rem"
      />
      <div
        className="sc-jTzLTM bYVLcY"
        width="4rem"
      />
    </div>
  </div>
</div>
`;

exports[`Interests should show subtopics for selected topic 1`] = `
<div>
  <h1
    className="sc-ktHwxA fqWARb"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-cIShpX uxCpR"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-gzOgki hbJuDZ"
  >
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK kzASCa"
          onClick={[Function]}
          selected={true}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-cmTdod eRUlwx"
            selected={true}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#ffffff",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
      <ul
        className="sc-jwKygS kVErd"
      >
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Kasvitiede"
            >
              Kasvitiede
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Eläintiede"
            >
              Eläintiede
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Luonnonsuojelu"
            >
              Luonnonsuojelu
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Ympäristönsuojelu"
            >
              Ympäristönsuojelu
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Ympäristö"
            >
              Ympäristö
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Metsätalous"
            >
              Metsätalous
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Metsänhoito"
            >
              Metsänhoito
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Maatalous"
            >
              Maatalous
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Maanviljely"
            >
              Maanviljely
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Puutarhanhoito"
            >
              Puutarhanhoito
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Kotieläintalous"
            >
              Kotieläintalous
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Turkisteollisuus"
            >
              Turkisteollisuus
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Metsäteollisuus"
            >
              Metsäteollisuus
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Kalastus"
            >
              Kalastus
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Metsästys"
            >
              Metsästys
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
        <li
          className="sc-btzYZH bstvwU"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <button
              className="sc-iELTvK dWLOio"
              onClick={[Function]}
              selected={false}
              value="Biologia"
            >
              Biologia
              <div
                className="sc-cmTdod iAjVvk"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "marginTop": "0.7rem",
                      "stroke": "#e2e2e2",
                      "strokeWidth": 2,
                      "width": "1rem",
                    }
                  }
                />
              </div>
            </button>
          </div>
        </li>
      </ul>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-iyvyFf mNlOA"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-iELTvK fLYLHq"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-cmTdod idZNkE"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Interests should show top level interest suggestions when fetched successfully 1`] = `
<div>
  <h1
    className="sc-jKJlTe hLLFbS"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-eNQAEJ jNgNok"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-jlyJG psyvI"
  >
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-gipzik iOyWbu"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-kkGfuU ksYOEb"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-iAyFgw eGBEg"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "1rem",
                  "marginTop": "0.7rem",
                  "stroke": "#e2e2e2",
                  "strokeWidth": 2,
                  "width": "1rem",
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
